add refresh and clear token handlers for customers
